--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,13 @@
+/*------ Splash Screen --------------------------*/
+
+.splashContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+}
+
 /*------ Map --------------------------*/
 
 .scroll {
@@ -78,3 +88,56 @@
   margin-top: 20px;
   margin-bottom: 25px;
 }
+
+/*------ Account --------------------------*/
+
+.accountContent {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.account-title {
+  padding: 40px 0;
+  flex: 1;
+}
+
+@media (min-width: 480px) {
+  .accountContent {
+    margin-left: 20%;
+    margin-right: 20%;
+    width: 60%;
+  }
+
+  .account-title {
+    padding: 80px 0;
+  }
+}
+
+.account-user-content {
+  flex: 2;
+  align-self: stretch;
+}
+
+.account-auth-btn {
+  margin: 30px 0;
+  width: 100%;
+}
+
+.account-footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  flex: 1;
+  text-align: center;
+}
+
+.legal-disclaimer {
+  color: grey;
+  font-size: 10px;
+}
+
