--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,9 +1,14 @@
-<ion-view view-title="Your Account">
+<ion-view>
+    <ion-nav-title>
+      <p><img class="bag-logo" src="img/bag.svg">Your Account</p>
+    </ion-nav-title>
+
   <ion-content class="padding">
   <div class="accountContent">
     <h1 class="account-title">Plastic Bag Recyling Finder</h1>
 
     <div class="account-user-content">
+      <img class="account-bag-img" src="img/bag.svg">
       <p>
         Get rid of that pile lurking underneath your kitchen sink. Do something good
         for the world.
@@ -37,7 +42,9 @@
 
       <p class="legal-disclaimer">
         Copyright 2016
-        Raquel Bujans
+        Raquel Bujans<br>
+        Bag Icon courtesy of Ryzhkov Anton from the
+        <a href="https://thenounproject.com/">Noun Project</a>
       </p>
     </div>
 
