--- a/www/templates/tab-pins.html
+++ b/www/templates/tab-pins.html
@@ -1,4 +1,7 @@
-<ion-view view-title="Recycle Your Plastic Bags">
+<ion-view>
+  <ion-nav-title>
+    <p><img class="bag-logo" src="img/bag.svg">Recycle Your Plastic Bags</p>
+  </ion-nav-title>
 
   <ion-nav-buttons side="primary">
     <button class="button button-icon ion-plus" ng-click="openAddPanel()" ng-if="::isAdmin">
