--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,4 +1,8 @@
-<ion-view view-title="Recycle Your Plastic Bags">
+<ion-view>
+  <ion-nav-title>
+    <p><img class="bag-logo" src="img/bag.svg">Recycle Your Plastic Bags</p>
+  </ion-nav-title>
+
   <ion-content class="padding" scroll="false" data-tap-disabled="true">
     <div id="map" data-tap-disabled="true"></div>
   </ion-content>
