offline capabilities enabled. user auth disabled for now, until firebase irons out some issues. app is ready!

--- a/www/templates/pin-detail.html
+++ b/www/templates/pin-detail.html
@@ -1,7 +1,7 @@
 <ion-view>
     <ion-nav-title>
       <p>
-        <img class="bag-logo" src="img/bag.svg">
+        <img class="bag-logo energized" src="img/bag.svg">
         <span>{{::(pin.name ? pin.name : 'Location Detail')}}</span>
       </p>
     </ion-nav-title>
