--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -14,12 +14,12 @@
         for the world.
       </p>
 
-      <p ng-if="!user">
+      <!--p ng-if="!user">
         You don't need an account to use the app, but if you create one you'll be able to
         save your favorite locations!
-      </p>
+      </p-->
 
-      <button class="button button-large button-outline button-balanced account-auth-btn"
+      <!--button class="button button-large button-outline button-balanced account-auth-btn"
           ng-click="login()" ng-show="!user">
         Login
       </button>
@@ -27,15 +27,15 @@
       <button class="button button-large button-outline button-balanced account-auth-btn"
           ng-click="logout()" ng-show="user">
         Logout
-      </button>
+      </button-->
 
     </div>
 
     <div class="account-footer">
-      <button class="button button-small button-clear button-balanced" ng-click="closeAccount()"
+      <!--button class="button button-small button-clear button-balanced" ng-click="closeAccount()"
           ng-show="user">
         Delete my account
-      </button>
+      </button-->
 
       <p class="legal-disclaimer">
         Copyright 2016
