--- a/www/templates/tab-pins.html
+++ b/www/templates/tab-pins.html
@@ -58,7 +58,7 @@
         <a href="#/tab/pins/{{pin.$id}}"
             class="pins-detailLink icon ion-chevron-right icon-accessory"></a>
 
-        <div class="buttons" ng-if="::isAdmin">
+        <!--div class="buttons" ng-if="::isAdmin">
           <button class="button button-clear button-positive" ng-click="remove(pin)"
               ng-if="::isAdmin">
             <i class="icon ion-trash-b"></i>
@@ -83,7 +83,7 @@
           <button class="button button-clear button-energized" ng-click="unfavorite(pin)"
               ng-if="isFavorite(pin)">
             <i class="icon ion-ios-star"></i>
-          </button>
+          </button-->
 
         </div>
       </ion-item>
@@ -103,7 +103,7 @@
         <a href="#/tab/pins/{{pin.$id}}"
             class="pins-detailLink icon ion-chevron-right icon-accessory"></a>
 
-        <div class="buttons" ng-if="::isAdmin">
+        <!--div class="buttons" ng-if="::isAdmin">
           <button class="button button-clear button-positive" ng-click="remove(pin)"
               ng-if="::isAdmin">
             <i class="icon ion-trash-b"></i>
@@ -128,7 +128,7 @@
           <button class="button button-clear button-energized" ng-click="unfavorite(pin)"
               ng-if="isFavorite(pin)">
             <i class="icon ion-ios-star"></i>
-          </button>
+          </button-->
 
         </div>
       </ion-item>
