--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,103 +1,147 @@
 /*------ Global --------------------------*/
+
 .bag-logo {
   display: inline;
   float: left;
   height: 44px;
   margin-top: 3px;
-  margin-right: 5px; }
+  margin-right: 5px;
+}
 
 .pb-overlay-icon {
-  padding: 2px; }
+  padding: 2px;
+}
 
 /*------ Map --------------------------*/
+
 .scroll {
-  height: 100%; }
+  height: 100%;
+}
 
 #map {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
+
+// .map-openNowMessage {
+//   color: green;
+// }
 
 .map-infoContent {
   max-width: 200px;
-  color: black; }
+  color: black;
+}
 
 .map-info-titleLink {
   font-weight: bold;
-  text-decoration: none; }
+  text-decoration: none;
+}
+
+.map-info-DirectionsLink {
+
+}
 
 /*------ Pins --------------------------*/
 .pins-pinForm {
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+}
 
 .item, .item h1, .item h2, .item h3, .item h4, .item h5, .item h6, .item p,
 .item-content, .item-content h1, .item-content h2, .item-content h3, .item-content h4, .item-content h5, .item-content h6,
 .item-content p,
 .item-content p.pins-address {
-  white-space: normal; }
+  white-space: normal;
+}
 
 .pins--flagged h2 {
-  color: red; }
+  color: red;
+}
 
 .pins--flagged p {
-  color: red; }
+  color: red;
+}
 
 .pins--unapproved h2 {
-  color: lightgrey; }
+  color: lightgrey;
+}
 
 .pins--unapproved p {
-  color: lightgrey; }
+  color: lightgrey;
+}
 
 .pins-detailLink {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 /*------ Pin Detail --------------------------*/
+
 .pinDetail {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  text-align: center; }
+  text-align: center;
+}
+
+// .pinDetail-openNowMessage {
+//   color: green;
+//   font-weight: bold;
+// }
 
 .pinDetail-dailyHours {
   margin-top: 20px;
-  margin-bottom: 25px; }
+  margin-bottom: 25px;
+}
 
 /*------ Account --------------------------*/
+
 .accountContent {
   display: flex;
   text-align: center;
   flex-direction: column;
   width: 90%;
   margin-left: 5%;
-  margin-right: 5%; }
+  margin-right: 5%;
+}
 
 .account-title {
   padding: 40px 0;
-  flex: 1; }
+  flex: 1;
+}
 
 @media (min-width: 480px) {
   .accountContent {
     margin-left: 20%;
     margin-right: 20%;
-    width: 60%; }
+    width: 60%;
+  }
+
   .account-title {
-    padding: 80px 0; } }
+    padding: 80px 0;
+  }
+}
 
 .account-bag-img {
-  height: 175px; }
+  height: 175px;
+}
 
 .account-user-content {
   flex: 2;
-  align-self: stretch; }
+  align-self: stretch;
+}
 
 .account-auth-btn {
   margin: 30px 0;
-  width: 100%; }
+  width: 100%;
+}
 
 .account-footer {
   flex: 1;
-  text-align: center; }
+  text-align: center;
+}
 
 .legal-disclaimer {
   color: grey;
-  font-size: 10px; }
+  font-size: 10px;
+}
+
