added icon. got connectivity code working

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -5,7 +5,7 @@
 
   <ion-content class="padding">
   <div class="accountContent">
-    <h1 class="account-title">Plastic Bag Recyling Finder</h1>
+    <h1 class="account-title">Plastic Bag Recyling Location Finder</h1>
 
     <div class="account-user-content">
       <img class="account-bag-img" src="img/bag.svg">
@@ -40,8 +40,9 @@
       <p class="legal-disclaimer">
         Copyright 2016
         Raquel Bujans<br>
-        Bag Icon courtesy of Ryzhkov Anton from the
-        <a href="https://thenounproject.com/">Noun Project</a>
+        Icons courtesy of Ryzhkov Anton from the
+        <a href="https://thenounproject.com/">Noun Project</a> and
+        <a href="http://cliparts.co/clipart/143174">Clip arts</a>
       </p>
     </div>
 
