worked out issues with connectivity

--- a/www/templates/tab-pins.html
+++ b/www/templates/tab-pins.html
@@ -28,11 +28,11 @@
             <div class="button-bar">
               <button type="submit" class="button button-balanced" ng-disabled="pinForm.$invalid"
                   ng-click="submitForm()">
-                Submit
+                <i class="icon ion-checkmark-round"></i>
               </button>
 
               <button class="button button-energized" ng-click="closeAddPanel()">
-                Cancel
+                <i class="icon ion-android-cancel"></i>
               </button>
             </div>
           </div>
